# proof-of-concept

./: README.md  app.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: lint.yml
ipppi_proof_of_concept/: __init__.py  auth.py  check.py  fetch.py  metadata.py  proposal.py  simple.py  singletons.py  update.py
ipppi_proof_of_concept/static/: __init__.py  index.html  login.html  mine.html  propose_names.html  propose_pkg.html  propose_versions.html  propose_whl.html  register.html  review.html  simple.html
static/: login.html  register.html
